2009-06-05  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Validation.pm: Allow %p/opt and %p/local

2009-05-18  Daniel Macks  <dmacks@netspace.org>

	* Bootstrap.pm: Auto-update apt-dev if new version available

2009-05-15  Dave Morrison  <drm@finkproject.org>

	* Services.pm: aptget_lockwait now specifies the full path to the
	apt-get-lockwait executable, or, if that is unavailable, the full
	path to the apt-get executable
	* FinkVersion.pm.in: take the current architecture into account when 
	reporting the default binary distribution
	* Configure.pm: don't ask about the unstable tree if a SelfUpdateMethod
	has not been chosen yet (necessary change for successful bootstrapping)

2009-05-13  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* Services.pm: Fix typo in dpkg_lockwait.

2009-05-12  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: recognize 10.5.7

2009-05-12  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: refactor bootstrap
	* Package.pm: don't use the disk cache during the first part of
	bootstrap (because we may be running under a different perl than fink 
	will eventually use, and Storable.pm may be incompatible)

2009-05-11  Dave Morrison  <drm@finkproject.org>

	* VirtPackage.pm: we don't use system perl on 10.5/x86_64
	* PkgVersion.pm: use the correct perl for Type: perl on 10.5/x86_64

2009-05-11  Daniel Macks  <dmacks@netspace.org>

	* Config.pm: Defer loading of FinkVersion until actually used

2009-05-11  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Don't store undef env var.

2009-05-09  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: -m mode has some effect in other actions and also has
	lots of effects beyond one options token.

2009-05-08  Dave Morrison  <drm@finkproject.org>

	* Services.pm: dpkg_lockwait now specifies the full path to the
	dpkg_lockwait executable, but if that is unavailable, defaults to
	the first available dpkg executable in the PATH

2009-05-01  Dave Morrison  <drm@finkproject.org>
